--- a/templates/partials/header.html.twig
+++ b/templates/partials/header.html.twig
@@ -21,7 +21,7 @@
                         <a class="dropdown-item" href="{{path('students_index')}}">List</a>
                         <a class="dropdown-item" href="{{path('students_new')}}">Add</a>
                     </div>
-                    </li>
+                </li>
                 <li class="nav-item">
                     <a class="nav-link" href="{{path('hello_base')}}">Home base</a>
                 </li>
@@ -31,12 +31,36 @@
                 </li>
 
             </ul>
+
+            <ul class="navbar-nav ml-auto">
+                {% if app.user %}
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Mon compte
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" href="{{path('account_profile')}}">Mon Profile</a>
+                            <a class="dropdown-item" href="{{path('account_password')}}">Changer mot de passe</a>
+                        </div>
+                    </li>
+                    <li class="nav-item">
+                        <a href="{{ path('account_logout') }}" class="btn btn-outline-danger" type="submit">Deconnexion</a>
+                    </li>
+                {% else %}
+                    <li class="nav-item">
+                        <a href="{{ path('account_register') }}" class="btn btn-outline-success" type="submit">Inscription</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="{{ path('account_login') }}" class="btn btn-outline-success" type="submit">Connexion</a>
+                    </li>
+                {% endif %}
+            </ul>
         </div>
     </nav>
 
     {% for label, messages in app.flashes %}
         <div class="container">
-            <div class="alert alert-{{ label }}">
+            <div class="alert alert-{{ label }} text-center">
                 {% for message in messages %}
                     <p>{{ message | raw }}</p>
                 {% endfor %}
