Mise en place de la pagination

--- a/templates/student/index.html.twig
+++ b/templates/student/index.html.twig
@@ -23,7 +23,7 @@
             </tr>
         </thead>
         <tbody>
-            {% for st in students %}
+            {% for st in pagination.data %}
             <tr>
                 <td>{{ st.id }}</td>
                 <td>{{ st.matricule }}</td>
@@ -34,12 +34,15 @@
                     <a href="{{ path('student_show', {'id': st.id}) }}">détail</a>
                     <a href="{{ path('student_edit', {'id': st.id}) }}">edit</a>
                     <a href="{{ path('student_delete', {'id': st.id}) }}" 
-                    onclick="return confirm(`Etes-vous sûr de vouloir supprimer ce student au matricule: {{ st.matricule }}.`)">supprimer</a>
+                    onclick="return confirm(`Etes-vous sûr de vouloir supprimer ce student au matricule: {{ st.matricule }}`)">supprimer</a>
                 </td>
             </tr>
             {% endfor %}
         </tbody>
     </table>
+    {# inclure la pagination #}
+    {{ pagination.display() }}
+</div>
 
 </div>
 {% endblock %}
