--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -12,6 +12,8 @@
 		{% block stylesheets %}
 		{#{{ encore_entry_link_tags('app') }}#}
 		<link rel="stylesheet" href="{{ asset('css/bootstrap.min.css') }}">
+		{# <link rel="stylesheet" href="{{ asset('css/all.css') }}"> #}
+		<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">
 		<style>
 			.badge{
 				color: white !important; 
