--- a/templates/partials/header.html.twig
+++ b/templates/partials/header.html.twig
@@ -13,6 +13,9 @@
                     <a class="nav-link" href="{{path('homepage')}}">Home<span
                             class="sr-only">(current)</span></a>
                 </li>
+                 <li class="nav-item">
+                    <a class="nav-link" href="{{path('dashboard')}}">Dashboard</a>
+                </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Students
